--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
+# Application Name
 spring.application.name=monevo
+
+# Server Port
 server.port=3000
-spring.datasource.url=jdbc:mysql
+
+# MySQL Data Source Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/monevo-db
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
